--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <label for="password">password</label><br>
     <input id="password" type="password"><br><br>
     <button id="register">Register</button>
+    
+    <h1>LOGIN FORM</h1>
+    <label for="email">email</label><br>
+    <input id="emailForLogin" type="text"><br><br>
+    <label for="password">password</label><br>
+    <input id="passwordForLogin" type="password"><br><br>
+    <button id="login">Login</button>
 
     
     <script type="module" src="./assests/js/config.js"></script>
